Update run checkpoint & ZGC test